Flare v1.08 (WIP)

Engine fixes:

* Fixed sdl_hardware renderer not clearing top/bottom for tall windows.



Flare v1.07 (http://flarerpg.org/index.php/2018/08/31/flare-1-07/)

Engine features:

* Added descriptions for some of the player stats to help clarify their purpose.
* The game now remembers if the player dismissed the quest log notification.
* Navigating cutscenes has been improved. Players can move back and forth through scenes with left/right arrows.
* Vertical scrolling cutscenes can be manually scrolled with the Up and Down keys.
* Scenes in cutscenes can now pause indefinitely by using "pause=-1".
* Added a "lifeform" flag to enemy stats. Setting it to false will display "Destroyed" instead of "Dead" when their HP reaches 0.
* Mod descriptions can now be translated with "description_locale".
* Added "enable_overlay", "start_at_bottom", and "overlay_at_bottom" to HUD log configuration.
* Added "requires_status" and "requires_not_status" to book text.
* Added ability for book text to use special variables like "${AVATAR_NAME}".
* Added random selection of portrait and class to New Game menu.
* Allow setting the class list height in the New Game menu.
* Display a list of completed quests in the Quests log.
* Item icons can now have an overlay image based on their quality.
* Added widget settings for modifying the appearance of the quantity text on item icons.
* Added support for playing a sound effect and showing a message when player lacks required MP for power usage.
* Added ability to grant bonuses to power levels via items with the "bonus_power_level" property.

Engine fixes:

* Fixed GetText bug where fuzzy state from header wasn't being unset properly.
* Fixed rendering bug in WidgetTabControl.
* Fixed crashes when using an empty WidgetListBox.
* Fixed GetText bug where strings weren't being sanitized.
* Fix locked left/right keys when loading a cutscene from the dev console.