@@ -149,6 +149,7 @@ RenderDevice::RenderDevice()
 	, hwsurface(false)
 	, vsync(false)
 	, texture_filter(false)
+	, ignore_texture_filter(false)
 	, min_screen(640, 480)
 	, is_initialized(false)
 	, reload_graphics(false)
